overflow text inside <foreignObject> no longer visible when "overflow:visible" is specified
Categories
(Core :: SVG, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox67 | --- | wontfix |
| firefox68 | --- | wontfix |
| firefox69 | --- | fixed |
People
(Reporter: violet.bugreport, Assigned: violet.bugreport)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(4 files)
You should also see the overflowed text.
It works on Firefox 67, but not 68.
| Assignee | ||
Updated•7 years ago
|
Comment 1•7 years ago
|
||
Hmm, I can reproduce on Firefox67.0.1 Windows10 too.
Regression Window:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=976d771a3b16d637d077d4fa9c272d2370e76510&tochange=133a13c44abedac2e448d315a32068ce1a5568f4
Regressed by: Bug 1458968
| Assignee | ||
Comment 2•7 years ago
|
||
Thanks for finding the regression range. It's surprising since I can see the overflow text on Ubuntu 18.04 Firefix 67, with or without WebRender enabled.
| Assignee | ||
Comment 3•7 years ago
|
||
| Assignee | ||
Comment 4•7 years ago
|
||
Could you try to see what happens on Linux machine? Win10 has quite some weird problems that doesn't occur on other platforms.
Comment 5•7 years ago
|
||
I can also reproduce the issue on Firefox67.0.1 ubuntu18.04 ....
| Assignee | ||
Comment 6•7 years ago
|
||
Interesting... I just downloaded Firefox 67.0.1, I can reproduce the problem as well...
So it's ok for Firefox 67.0 (Build ID 20190517140819), but not Firefox 67.0.1 (Build ID 20190529130856)
Comment 7•7 years ago
|
||
Hmm, I can also reproduce the issue on Firefox67.0(Build Id) Ubuntu18.04 as well as 67.0.1...
Name Firefox
Version 67.0
Build ID 20190516215225
Update History
Update Channel release
User Agent Mozilla/5.0 (X11; Linux x86_64; rv:67.0) Gecko/20100101 Firefox/67.0
(In reply to violet.bugreport from comment #6)
Interesting... I just downloaded Firefox 67.0.1, I can reproduce the problem
as well...So it's ok for Firefox 67.0 (Build ID 20190517140819), but not Firefox
67.0.1 (Build ID 20190529130856)
Yours build ID 20190517140819 for Firefox67.0 is strange for me.
Updated•7 years ago
|
Comment 8•7 years ago
|
||
The priority flag is not set for this bug.
:dholbert, could you have a look please?
For more information, please visit auto_nag documentation.
Updated•7 years ago
|
| Assignee | ||
Comment 10•7 years ago
|
||
Comment 11•7 years ago
|
||
Comment 12•7 years ago
|
||
| bugherder | ||
Updated•7 years ago
|
Updated•7 years ago
|
Updated•4 years ago
|
Description
•