Bug 1557245 - Support overflow:visible for foreignObject r=longsonr

Differential Revision: https://phabricator.services.mozilla.com/D35760